Make mRestorePos a logical position and convert to physical position when scrolling. Bug 638753, r=dbaron